@@ -570,8 +570,11 @@
 
       <Api name="checkbox" extends="baseInput hasHtmlEvents hasLabel">
         <Doc>
-          Basic checkbox which implements a 1/0 switch. The label (if used) is placed right to the checkbox
+          Basic checkbox which implements a 1/0 switch. The label (if used) is placed right to the checkbox.
         </Doc>
+        <Param name="values" type="string" default="1|0">
+          <Doc>A pipe separated value of two string which are used for a checked/unchecked state. By default this is 1 and 0.</Doc>
+        </Param>
       </Api>
 
       <Api name="singleSelect" extends="hasCaptions baseInput hasLabel hasValidator">
